--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
   "dependencies": {
     "@lottiefiles/react-lottie-player": "^3.5.3",
     "autoprefixer": "10.4.14",
-    "flowbite": "^1.6.5",
     "next": "13.4.4",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-lottie-player": "^1.5.4",
+    "react-icons": "^4.9.0",
+    "react-player": "^2.12.0",
+    "react-scroll": "^1.8.9",
     "tailwindcss": "3.3.2"
   }
 }
