--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "@lottiefiles/react-lottie-player": "^3.5.3",
     "aos": "^2.3.4",
     "autoprefixer": "10.4.14",
+    "axios": "^1.4.0",
+    "date-fns": "^2.30.0",
+    "firebase": "^10.0.0",
     "next": "13.4.4",
     "postcss": "8.4.24",
     "react": "18.2.0",
@@ -19,6 +22,7 @@
     "react-icons": "^4.9.0",
     "react-player": "^2.12.0",
     "react-scroll": "^1.8.9",
+    "react-toastify": "^9.1.3",
     "tailwindcss": "3.3.2"
   }
 }
